--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
 
-    <title>Sador IPS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <title>SADOR IPS</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <div id="modal"></div>
+</body>
+
 </html>
